@@ -1,7 +1,7 @@
 WORKING ON:
- - Fixing recipe costs (they are too high and relying on one resource too much)
-    * They seem to be unbalanced in space age
+ - Prevent big numbers of ingredients (like, >100 at once)
  - Make not every recipe randomize (same thing as with item randomization)
+ - Item randomization on technologies to get science packs different
 
  - Check softlocks from discord person and just submitted
  - Look into rocket launch time bug
@@ -11,7 +11,7 @@ Bigger thins:
  - Tech unlock randomization
  - Tech packs required randomization
  - Dupes
- - Misc. randomizations that I need to go back to, like modules
+ - Misc. randomizations that I need to go back to, like cliffs
  - New randomizations
  - Space age randomizations
  - Maybe look over TODO's one last time
@@ -47,6 +47,7 @@ Bigger thins:
 38. Randomize trigger effects?
 39. Fallback recipes approach? With recycling?
 40. Buildings don't spoil quickly
+41. Value-aware coproduct split... use already-determined costs for things to distribute value among recipe results when there's more than one result
 
 DONE:
 21. Ore swap randomization
