@@ -20,7 +20,7 @@ randomizations.tech_costs = function(id)
                     tbl = tech.unit,
                     property = "count",
                     abs_min = 1,
-                    bias = -0.03,
+                    bias = 0.05,
                     dir = -1
                 })
 
@@ -32,7 +32,7 @@ randomizations.tech_costs = function(id)
                     key = key,
                     dummy = 1,
                     abs_min = 1,
-                    bias = -0.03,
+                    bias = 0.05,
                     dir = -1
                 })
                 tech.unit.count_formula = formula_multiplier .. "*(" .. tech.unit.count_formula .. ")"
@@ -54,6 +54,7 @@ randomizations.tech_times = function(id)
                 tbl = tech.unit,
                 property = "time",
                 abs_min = 1,
+                bias = 0.05,
                 dir = -1,
                 rounding = "discrete"
             })
